test/libsolidity/syntaxTests/functionTypes/delete_external_function_type_invalid.sol
contract C {
    function f() public {
        delete this.f;
    }
}
// ----
// TypeError: Expression has to be an lvalue.
